--- a/app/src/main/res/layout/activity_marker.xml
+++ b/app/src/main/res/layout/activity_marker.xml
@@ -15,5 +15,5 @@
         android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="start" />
 </LinearLayout>
