--- a/app/src/main/res/layout/activity_detail_map.xml
+++ b/app/src/main/res/layout/activity_detail_map.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,85 +20,87 @@
         <TableLayout
             android:id="@+id/detailDescTable"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
 
             <TableRow
-                android:id="@+id/detailTitle"
+                android:id="@+id/detailName"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/detailTvNameLabel"
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/detailTitleValue"
+                    android:id="@+id/detailNameValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text=""
                     android:textSize="18sp" />
             </TableRow>
 
             <TableRow
-                android:id="@+id/detaileAddress"
+                android:id="@+id/detailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/detailTvAddressLabel"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/detailAddressValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text=""
                     android:textSize="18sp" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/detailOpenTime"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/detailTvTimeLabel"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/detailOpenTimeValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text=""
                     android:textSize="18sp" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/detailClosed"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/detailTvClosedLabel"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/detailClosedValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text=""
                     android:textSize="18sp" />
             </TableRow>
 
