--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#81D8CF</color>
+    <color name="colorPrimaryDark">#81D8CF</color>
+    <color name="navigationBarColor">#81D8CF</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="introBG">#81D8CF</color>
     <color name="introTitle">#FFF</color>
