--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="80dp"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,65 +26,50 @@
             android:id="@+id/signupTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="100dp"
             android:text="@string/signup"
             android:textAlignment="center"
             android:textSize="30sp" />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/field_signup_id"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="40dp"
+            android:hint="@string/id"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:text=""
+            android:textAlignment="center"
+            tools:targetApi="O" />
 
-            <LinearLayout
-                android:layout_width="120dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+        <EditText
+            android:id="@+id/field_signup_password"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:hint="@string/password"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:text=""
+            android:textAlignment="center"
+            tools:targetApi="O" />
 
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/id"
-                    android:textAlignment="center"
-                    android:textSize="30sp" />
+        <EditText
+            android:id="@+id/field_signup_nickname"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:hint="@string/nickname"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:text=""
+            android:textAlignment="center"
+            tools:targetApi="O" />
 
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/password"
-                    android:textAlignment="center"
-                    android:textSize="30sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <EditText
-                    android:id="@+id/field_id"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:importantForAutofill="no"
-                    android:inputType="text"
-                    android:labelFor="@id/textView10"
-                    android:text=""
-                    android:textAlignment="center"
-                    tools:targetApi="O" />
-
-                <EditText
-                    android:id="@+id/field_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:importantForAutofill="no"
-                    android:inputType="text"
-                    android:text=""
-                    android:textAlignment="center"
-                    tools:targetApi="O" />
-            </LinearLayout>
-        </LinearLayout>
+        <Button
+            android:id="@+id/callSignupBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="@string/signup" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
