--- a/app/src/main/res/layout/activity_detail_map.xml
+++ b/app/src/main/res/layout/activity_detail_map.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -21,13 +20,15 @@
         <ListView
             android:id="@+id/detailListView"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="300dp">
 
         </ListView>
+
         <ListView
             android:id="@+id/detailCommentView"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="50dp">
 
         </ListView>
     </LinearLayout>
