--- a/app/src/main/res/layout/detail_sub_layout.xml
+++ b/app/src/main/res/layout/detail_sub_layout.xml
@@ -68,6 +68,67 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textSize="18sp" />
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/detailWebsite"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="@string/website"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/detailWebsiteValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="18sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/detailTel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="@string/tel"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/detailTelValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="18sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/detailPay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="@string/pay"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/detailPayValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="18sp" />
         </TableRow>
 
     </TableLayout>
